--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,25 +1,48 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name": "Mefnevan",
+  "version": "1.0.0",
+  "manifest_version": 2,
+  "description": "Mefnevan",
+  "icons": {
+      "192": "logo192.png",
+      "512": "logo512.png"
+  },
+  "browser_action": {
+      "default_icon": "logo512.png",
+      "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["jquery-3.5.1.min.js", "background.js"],
+    "persistent": false
+  },
+  "permissions": [
+    "tabs",
+    "storage",
+    "clipboardRead",
+    "https://www.messenger.com/*",
+    "https://*.facebook.com/*",
+    "https://mbasic.facebook.com/",
+    "notifications"
+],
+"content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+        "all_frames": true,
+        "css": ["inject-helper/css/emoji.css", "inject-helper/css/common.css"],
+        "js": [
+            "inject-helper/js/jquery-3.1.0.min.js",
+            "inject-helper/js/arrive.js",
+            "inject-helper/js/lazyload.min.js",
+            "inject-helper/js/config.js",
+            "inject-helper/js/util.js",
+            "inject-helper/js/jquery.emojiarea.js",
+            "inject-helper/js/emoji-picker.js",
+            "content.js"
+        ],
+        "matches": [
+            "https://*.messenger.com/*",
+            "https://*.facebook.com/*"
+        ],
+        "run_at": "document_start"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+]
 }
