--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "bootstrap-switch": "^3.4.0",
+    "bootstrap-switch-button-react": "^1.2.0",
     "classnames": "^2.2.6",
     "jwt-decode": "^3.1.2",
+    "mdbreact": "^5.0.1",
+    "rc-switch": "^3.2.2",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.1",
+    "react-native-draggable-switch": "^1.1.1",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-switch": "^6.0.0",
     "reactstrap": "^8.8.1",
     "web-vitals": "^0.2.4"
   },
