--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "author": "Prodipto Dhar",
   "license": "ISC",
   "dependencies": {
+    "TypeCast": "^0.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
