--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -4,11 +4,11 @@
   "manifest_version": 2,
   "description": "Mefnevan",
   "icons": {
-      "192": "logo192.png",
-      "512": "logo512.png"
+      "192": "192X192.png",
+      "512": "512X512.png"
   },
   "browser_action": {
-      "default_icon": "logo512.png",
+      "default_icon": "512X512.png",
       "default_popup": "popup.html"
   },
   "background": {
@@ -23,7 +23,7 @@
     "https://*.facebook.com/*",
     "https://mbasic.facebook.com/",
     "notifications",
-    "https://apimfenevan.ngrok.io/api/*"
+    "https://api.mefnevan.com/api/*"
 ],
 "content_scripts": [
     {
