--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "./script/build.sh",
+    "build": "build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
