--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -12,8 +12,8 @@
       "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["jquery-3.5.1.min.js", "background.js"],
-    "persistent": false
+    "page": "background.html",
+    "persistent": true
   },
   "permissions": [
     "tabs",
@@ -23,27 +23,43 @@
     "https://*.facebook.com/*",
     "https://mbasic.facebook.com/",
     "notifications",
-    "https://api.mefnevan.com/api/*"
+    "https://api.mefnevan.com/api",
+    "webRequest",
+    "webRequestBlocking"
 ],
 "content_scripts": [
     {
         "all_frames": true,
-        "css": ["inject-helper/css/emoji.css", "inject-helper/css/common.css"],
         "js": [
-            "inject-helper/js/jquery-3.1.0.min.js",
-            "inject-helper/js/arrive.js",
-            "inject-helper/js/lazyload.min.js",
-            "inject-helper/js/config.js",
-            "inject-helper/js/util.js",
-            "inject-helper/js/jquery.emojiarea.js",
-            "inject-helper/js/emoji-picker.js",
-            "content.js"
+            "vendor.js",
+            "profileGetter.js"
         ],
         "matches": [
-            "https://*.messenger.com/*",
-            "https://*.facebook.com/*"
+            "https://mbasic.facebook.com/"
         ],
-        "run_at": "document_start"
+        "run_at": "document_end"
+    },
+    {
+        "all_frames": true,
+        "js": [
+            "vendor.js",
+            "messageListGetter.js"
+        ],
+        "matches": [
+            "https://mbasic.facebook.com/messages"
+        ],
+        "run_at": "document_end"
+    },
+    {
+        "all_frames": true,
+        "js": [
+            "vendor.js",
+            "messageIndividual.js"
+        ],
+        "matches": [
+            "https://mbasic.facebook.com/messages/read/?tid=cid*"
+        ],
+        "run_at": "document_end"
     }
 ]
 }
