--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,12 +16,15 @@
     "rc-switch": "^3.2.2",
     "react": "^17.0.1",
     "react-animated-css": "^1.2.1",
+    "react-dnd": "8.*",
+    "react-dnd-html5-backend": "8.*",
     "react-dom": "^17.0.1",
     "react-native-draggable-switch": "^1.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-switch": "^6.0.0",
+    "react-tag-input": "^6.5.2",
     "reactstrap": "^8.8.1",
     "web-vitals": "^0.2.4"
   },
