--- a/back-end/package.json
+++ b/back-end/package.json
@@ -30,6 +30,7 @@
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
     "sequelize": "^6.3.5",
+    "typecast": "0.0.1",
     "underscore": "^1.12.0"
   }
 }
