--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,12 +21,15 @@
     "react-dom": "^17.0.1",
     "react-native-draggable-switch": "^1.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.2.1",
     "react-switch": "^6.0.0",
     "react-tag-input": "^6.5.2",
     "reactstrap": "^8.8.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
