--- a/front-end/public/manifest.json
+++ b/front-end/public/manifest.json
@@ -1,12 +1,15 @@
 {
   "name": "MeFn Evan",
-  "version": "1.1.1",
+  "version": "1.2.1",
   "manifest_version": 2,
   "description": "MeFn Evan",
   "icons": {
       "48": "48X48.png",
       "128": "128X128.png"
   },
+  "web_accessible_resources": [
+    "images/128X128.png"
+  ],
   "browser_action": {
       "default_icon": "128X128.png",
       "default_popup": "popup.html"
@@ -57,7 +60,8 @@
             "messageIndividual.js"
         ],
         "matches": [
-            "https://mbasic.facebook.com/messages/read/?tid=cid*"
+            "https://mbasic.facebook.com/messages/read/?tid=cid*",
+            "https://mbasic.facebook.com/messages/read/?tid=gid*"
         ],
         "run_at": "document_end"
     }
