--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^4.2.1",
+    "react-show-more-text": "^1.4.6",
     "react-switch": "^6.0.0",
     "react-tag-input": "^6.5.2",
     "reactstrap": "^8.8.1",
