--- a/public/kyubiSettings.json
+++ b/public/kyubiSettings.json
@@ -17,12 +17,12 @@
      "small_icon": "images/16X16.png",
      "medium_icon": "images/48X48.png",
      "large_icon": "images/128X128.png",
-     "primary_logo": "images/logo.svg",
-     "secondary_logo": "images/app_logo.png",
+     "primary_logo": "images/128X128.png",
+     "secondary_logo": "images/128X128.png",
      "background_image": null
     },
     "loader": {
-     "preLoader": "images/wwcd_Loader.gif",
+     "preLoader": "images/128X128.png",
      "replyLoader": null,
      "customLoader": null
     },
