--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "runbuild.sh",
+    "build": "./runbuild.sh",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
