--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "image-to-base64": "^2.2.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -66,6 +67,7 @@
     "react-dom": "^17.0.1",
     "react-native-draggable-switch": "^1.1.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-numeric-input": "^2.2.3",
     "react-redux": "^7.2.3",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
@@ -91,7 +93,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "./runbuild.sh",
+    "build": "runbuild.sh",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
